# jisp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  GLEAM.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SNAPSHOT_MANIFEST.txt  TODO.md  example.json  import_map.json  minimal.ts  scripts.json  std.ts  workspace.code-workspace
.agents/handoffs/: 0026-portable-native-conformance.md
.agents/plans/: 0001-cargo-native-portable-lisp-tests.md  0002-ui-language-validation.md  0003-snapshot-diff-review.md  0004-p1-runtime-abi-validation.md  0005-parallel-snapshot-adoption.md  0006-testable-documentation.md  0007-native-variadic-functions.md  0008-native-bigint.md  0009-native-dynamic-object-reads.md  0010-user-macros.md  0011-case-alias-patterns.md  0012-case-alternative-patterns.md  0013-native-rust-diagnostic-remapping.md  0014-native-dynamic-object-updates.md  0015-project-schema.md  0016-native-open-object-abi.md  0017-p2-completion-audit.md  0018-macro-hygiene.md  0019-compiled-portable-ui-runtime.md  0019-indentation-reader-syntax-evaluation.md  0020-blitz-jispwind-renderer.md  0021-lisp-markup-reader.md  0022-non-toy-project-plan.md  0023-indentation-reader-syntax-evaluation.md  0024-native-conformance-and-examples.md  0024-native-conformance-and-flagship.md  0025-rust-embedded-adoption.md  0026-collab-crdt.md  0027-native-helper-conformance.md  0028-offline-package-determinism.md  0029-cross-syntax-semantic-parity.md  0030-lsp-incremental-sync-and-protocol.md  0031-typed-effects-and-structured-concurrency.md
.agents/scripts/: 0009-generate-portable-language-fixtures.py
.cargo/: config.toml
.github/workflows/: ci.yml  deno.yml  pages.yml
crates/jisp/: Cargo.toml  build.rs
crates/jisp-cli/: Cargo.toml
crates/jisp-cli/src/: lsp.rs  lsp_test.rs  main.rs  package_test.rs
crates/jisp-codegen-rust/: Cargo.toml
crates/jisp-codegen-rust/src/: bigint.rs  closures.rs  dynamic_objects.rs  emit.rs  emit_test.rs  enum_types.rs  intrinsics.rs  layout.rs  layout_test.rs  lib.rs  lib_test.rs  object_types.rs  patterns.rs  result.rs  source_map.rs
crates/jisp-core/: Cargo.toml
crates/jisp-eval/: Cargo.toml  build.rs  syntax_parity.rs
crates/jisp-eval/src/: builtins.rs  builtins_test.rs  env.rs  error.rs  evaluator.rs  lib.rs  ui.rs  ui_test.rs  value.rs
crates/jisp-eval/tests/: eval.rs  portable_language.rs  portable_lisp.rs  portable_lisp_support.rs  portable_support.rs  portable_ui.rs  portable_ui_support.rs  syntax_equivalence.rs  syntax_parity.rs
crates/jisp-expand/: Cargo.toml
crates/jisp-ir/: Cargo.toml
crates/jisp-macros/: Cargo.toml
crates/jisp-runtime/: Cargo.toml
crates/jisp-syntax-json/: Cargo.toml
crates/jisp-syntax-lisp/: Cargo.toml
crates/jisp-syntax-ws/: Cargo.toml
crates/jisp-syntax-yaml/: Cargo.toml
crates/jisp-types/: Cargo.toml
crates/jisp-ui/: Cargo.toml
crates/jisp-ui-capability-component/: Cargo.toml
crates/jisp-ui/src/: effects.rs  effects_decode.rs  effects_decode_test.rs  effects_test.rs  lib.rs  lib_test.rs  native.rs  testing.rs  testing_parse.rs  testing_test.rs
crates/jisp-wasm/: Cargo.toml
crates/jisp-wasm/src/: lib.rs  lib_test.rs
crates/jisp-wit-check/: Cargo.toml  build.rs
crates/jisp/src/: lib.rs  native_imports.rs
crates/jisp/tests/: codegen_rust.rs  diagnostic_conformance.rs  execution_contract.rs  expand.rs  export_schema.rs  module_resolution.rs  readme_examples.rs
dialects/: jsonish.yaml  oh.ucl
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  DIAGNOSTICS.md  FFI_FUTURE.md  NATIVE.md  PACKAGES.md  README.md  RUST_EMBEDDING.md  SPEC.md  STABILITY.md  STDLIB.md  TESTING.md  UI.md  UI_EFFECTS.md  native-support.json
docs/research/: GLEAM.md  INTEROP.md  IO_STORAGE.md  JSON_DATA_DIALECTS.md  MAL.md  MEMORY_SAFETY.md  PYTHON_JAVA.md  RUST_LISP_IMPLEMENTATIONS.md
examples/: hello.json  hello.lisp  hello.yaml  native.lisp  object_helpers.lisp  ui_button.lisp  ui_components.lisp
examples/collection-toolbox/: README.md  main.lisp  open-row.lisp  unsupported.lisp
examples/macro-normalizer/: README.md  main.lisp
examples/pricing-rules/: README.md  main.lisp  rules.lisp
examples/rust-embedded-report/: README.md  format.lisp  main.lisp
examples/task-pipeline/: README.md  main.lisp  tasks.lisp
misc/: example copy 2.yaml  example copy 4.yaml  example copy.yaml  example tw.yaml  example.classic.yaml  example.curly.yaml  example.ffffff  example.js  example.pm.yaml  example.square.yaml  example.yaml  jsonish.yaml  logtest.yaml  mal-reader.yaml  minimal-core.compact.yaml  minimal-core.yaml  minimal.jisp  minimal.yaml  minimalite.yaml  poc.yaml  tabtab.ts
misc/esbuild/: esbuild-deno.ts  svelte-example.js
playground/: app.js  index.html  style.css  version.json
playground/examples/: counter-tests.lisp  dashboard.lisp  effects.lisp  empty-state.lisp  finance.lisp  habits.lisp  kanban.lisp  keyed-reorder.lisp  local-effects.lisp  local-state.lisp  navigation.lisp  notifications.lisp  product.lisp  profile.lisp  projects.lisp  settings.lisp  todos.lisp  welcome.lisp
scripts/: test-playground.sh  verify-ui-capability-component-hosts.sh
src/: ast.ts  cli.ts  env.ts  eval.ts  fsevents.ts  jisp.ts  log.ts  minilog.ts  minimal.ts  std.ts  test.ts  ui.ts  utils.ts
src/syntax/: astfun.ts  curlyml.ts  minimal.ts  yaml.ts
tests/language/: bigint.lisp  bug-boundaries.lisp  case-patterns.lisp  core-control.lisp  functions-scope.lisp  list-pipeline.lisp  lists.lisp  macros-quote.lisp  numbers-strings.lisp  objects-ui.lisp  ui.lisp  (+4 more)
wit/: jisp-ui-capabilities.wit
(+126 files in other folders)
