[package]
name = "jisp-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indexmap.workspace = true
jisp-core.workspace = true
jisp-ir.workspace = true
jisp-runtime.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
thiserror.workspace = true

[build-dependencies]
jisp-core.workspace = true
jisp-syntax-json.workspace = true
jisp-syntax-lisp.workspace = true
jisp-syntax-ws.workspace = true
jisp-syntax-yaml.workspace = true

[dev-dependencies]
jisp-expand.workspace = true
jisp-syntax-json.workspace = true
jisp-syntax-lisp.workspace = true
jisp-syntax-ws.workspace = true
jisp-syntax-yaml.workspace = true
jisp-types.workspace = true
