[package]
name = "jisp-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
indexmap.workspace = true
jisp-core.workspace = true
jisp-eval.workspace = true
jisp-ir.workspace = true
jisp-types.workspace = true

[dev-dependencies]
jisp-syntax-lisp.workspace = true
