[package]
name = "jisp-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["juir"]
juir = []

[dependencies]
indexmap.workspace = true
jisp.workspace = true
jisp-core.workspace = true
jisp-syntax-json.workspace = true
jisp-syntax-lisp.workspace = true
jisp-syntax-ws.workspace = true
jisp-syntax-yaml.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
